--- a/DOM/Project/styles.css
+++ b/DOM/Project/styles.css
@@ -18,6 +18,11 @@
     border: 1px solid black;
 }
 
+
+.choice2:hover{
+    border: 10px solid black;
+}
+
 img {
     height: 200px;
     width: 200px;
