--- a/DOM/Project/styles.css
+++ b/DOM/Project/styles.css
@@ -29,3 +29,13 @@ img {
     object-fit: cover;
     border-radius: 50%;
 }
+
+.result-class{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    width: 500px;
+    height: 40px;
+    
+}
